[gd_scene load_steps=2 format=3 uid="uid://bw0i1wy6c26yp"]

[ext_resource type="Script" uid="uid://b62184fnaafn3" path="res://scripts/pause.gd" id="1_snhp4"]

[node name="Control" type="Control"]
process_mode = 2
custom_minimum_size = Vector2(640, 360)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_snhp4")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
custom_minimum_size = Vector2(640, 360)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.411765, 0.411765, 0.411765, 0.501961)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -335.0
offset_top = -194.5
offset_right = 335.0
offset_bottom = 194.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="MenuPrincipal" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="resumebutton" type="Button" parent="MarginContainer/VBoxContainer/MenuPrincipal"]
layout_mode = 2
text = "Resume"

[node name="optionsbutton" type="Button" parent="MarginContainer/VBoxContainer/MenuPrincipal"]
layout_mode = 2
text = "Opções"

[node name="quitbutton" type="Button" parent="MarginContainer/VBoxContainer/MenuPrincipal"]
layout_mode = 2
text = "Voltar ao menu iniciar"

[node name="MenuOpcoes" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_direction = 1
layout_mode = 2
size_flags_vertical = 6
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MenuOpcoes"]
layout_direction = 1
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MenuOpcoes/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Volume geral"

[node name="VolumeSlider" type="HSlider" parent="MarginContainer/VBoxContainer/MenuOpcoes/HBoxContainer/Label"]
layout_mode = 2
offset_left = 116.0
offset_top = 6.0
offset_right = 406.0
offset_bottom = 22.0

[node name="FullScreenButton" type="Button" parent="MarginContainer/VBoxContainer/MenuOpcoes"]
layout_mode = 2
text = "Tela cheia"

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer/MenuOpcoes"]
layout_mode = 2
text = "Voltar"

[connection signal="pressed" from="MarginContainer/VBoxContainer/MenuPrincipal/resumebutton" to="." method="_on_resumebutton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MenuPrincipal/optionsbutton" to="." method="_on_optionsbutton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MenuPrincipal/quitbutton" to="." method="_on_quitbutton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MenuOpcoes/FullScreenButton" to="." method="_on_full_screen_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MenuOpcoes/BackButton" to="." method="_on_backbutton_pressed"]
